--- a/jpa_learn/src/main/resources/application-h2.properties
+++ b/jpa_learn/src/main/resources/application-h2.properties
@@ -7,6 +7,11 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.statistics = trace
+logging.level.org.hibernate.type = debug
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
 management.endpoints.web.exposure.include=health,metrics
