--- a/SpringJPA/src/main/resources/application.properties
+++ b/SpringJPA/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 spring.application.name=SpringJPA
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
 
-spring.sql.init.mode=always
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringJpa
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration (if using Spring Data JPA)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+# Options: none, validate, update, create, create-drop
